languages/io-automaton-fe/src/test/resources/invalid/DoubleDefinitionOfSameInitial.ioautomaton
package invalid;

automaton DoubleDefinitionOfSameInitial {

    output int i;
    input int x;      
    
    state A,B,C,D;
    state E,F,G,H;
    
    // B and C are defined as initial twice - 2 Errors.
    initial A,B,C;
    initial B,E,F,C;  
    
    A->B;
    A->C;
    A->D;
    A->E;
    A->F;
    A->G;
    A->H; 
}